# 6_Anticipez_les_besoins_en_consommation_de_batiments

./: README.md  data_dictionary.xlsx  modele_energy.ipynb  modele_ghg.ipynb  pyproject.toml  seatle_predict_energy_ghg.py  template_modelistation_supervisee.ipynb  transform_script.ipynb
Archives/: template_modelistation_supervisee.ipynb
data/: building_consumption_cleaned.csv  building_consumption_features.csv  energy_features.csv  energy_target.csv  features.csv  ghg_features.csv  ghg_target.csv
docs/: Présentation Projet Seatle.pptx
seatle_predict_building/: bentofile.yaml  payload.json  requirements.txt  service.py  task-definition.json  test_api.py  train_and_save.py
seatle_predict_building/data/: buildings_to_predict.xlsx  energy_target.csv  ghg_target.csv  ~$buildings_to_predict.xlsx
